Removed code from class, small changes in readme/A1-3

--- a/05-assignments/Assignment_1.ipynb
+++ b/05-assignments/Assignment_1.ipynb
@@ -13,7 +13,7 @@
    "id": "5fce0350-2a17-4e93-8d4c-0b8748fdfc32",
    "metadata": {},
    "source": [
-    "This assignment is due on __Sunday 22 January__, by midnight. It pertains to content taught in classes 1-3, i.e., week 1. \n",
+    "This assignment is due on __Sunday March 17, by 11:59PM__. It pertains to content taught in classes 1-3. \n",
     "\n",
     "This assignment should be completed in Python, and an PDF file should be submitted, containing both code and written answers. If you like, you may create your own Jupyter Notebook file from scratch, but it is likely easier to modify this one.\n",
     "\n",
@@ -25,7 +25,7 @@
     "\n",
     "If you like, you may collaborate with others in the class. If you choose to do so, please indicate with whom you have worked at the top of your PDF. Separate submissions are required.\n",
     "\n",
-    "Any questions can be addressed to Kamilah ([kamilah.ebrahim@mail.utoronto.ca]()) and/or Ananya ([ananya.jha@mail.utoronto.ca]()) and/or Vishnou ([vishnouvina@cs.toronto.edu]()) before the due-date. Please sumbit your assistments through this [link](https://forms.gle/5ocshXh5ZtUj8WXY6)."
+    "Any questions can be addressed to Kamilah ([kamilah.ebrahim@mail.utoronto.ca]()) and/or Ananya ([ananya.jha@mail.utoronto.ca]()) and/or Vishnou ([vishnouvina@cs.toronto.edu]()) before the due-date. Please submit your assignments through your Drive Folder."
    ]
   },
   {
@@ -494,7 +494,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "_(iv)_ Now that we have our desired function, we can perform the bootstrap. Check out boot_SE()? to understand its three required arguments. Remember, because bootstrapping involves randomness, we must first set a seed for reproducibility!\n",
+    "_(iv)_ Now that we have our desired function, we can perform the bootstrap. Check out boot_samples()? to understand its three required arguments. Remember, because bootstrapping involves randomness, we must first set a seed for reproducibility!\n",
     "\n"
    ]
   },
@@ -505,8 +505,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Provided function to compute the bootstrap standard error\n",
-    "def boot_SE(data, func, R):\n",
+    "# Provided function to compute the bootstrap samples\n",
+    "def boot_samples(data, func, R):\n",
     "    \n",
     "    # Initialize an empty list to store the results\n",
     "    results = []\n",
@@ -526,7 +526,7 @@
     "    return results\n",
     "\n",
     "# Compute the bootstrapped samples\n",
-    "boot_se_samples = boot_SE(df['Petal.Length'], my_func, 1000)"
+    "boot_se_samples = boot_samples(df['Petal.Length'], my_func, 1000)"
    ]
   },
   {
