--- a/05-assignments/Assignment_2.ipynb
+++ b/05-assignments/Assignment_2.ipynb
@@ -13,7 +13,7 @@
    "id": "7fc97cd7-933f-4bac-804a-1f2cf85ebad6",
    "metadata": {},
    "source": [
-    "This assignment is due on __Thursday 25 January__, by midnight. It pertains to content taught in classes 4-6, i.e., week 2, but is weighted towards classes 4 and 5. \n",
+    "This assignment is due on __Wednesday March 20, by 11:59PM\t__. It pertains to content taught in classes 4-5.\n",
     "\n",
     "This assignment should be completed in Python, and an PDF file should be submitted, containing both code and written answers. If you like, you may create your own Jupyter Notebook file from scratch, but it is likely easier to modify this one.\n",
     "\n",
@@ -21,8 +21,7 @@
     "\n",
     "If you like, you may collaborate with others in the class. If you choose to do so, please indicate with whom you have worked at the top of your PDF. Separate submissions are required.\n",
     "\n",
-    "Any questions can be addressed to Kamilah ([kamilah.ebrahim@mail.utoronto.ca]()) and/or Ananya ([ananya.jha@mail.utoronto.ca]()) before the due-date. Please sumbit your assistments through this [link](https://forms.gle/nNJMjBRzDVaRKMBA9).\n",
-    "\n",
+    "Any questions can be addressed to Kamilah ([kamilah.ebrahim@mail.utoronto.ca]()) and/or Ananya ([ananya.jha@mail.utoronto.ca]()) and/or Vishnou ([vishnouvina@cs.toronto.edu]()) before the due-date. Please submit your assignments through your Drive Folder.\n",
     "### Set up"
    ]
   },
