--- a/05-assignments/Assignment_3.ipynb
+++ b/05-assignments/Assignment_3.ipynb
@@ -13,7 +13,7 @@
    "id": "784f307d-c76d-4cf9-95fc-76fc8008754e",
    "metadata": {},
    "source": [
-    "This assignment is due on __Sunday 28 January__, by midnight. It pertains to content taught in classes 5-7.\n",
+    "This assignment is due on __Saturday March 23, by 11:59PM__. It pertains to content taught in classes 3-4-5.\n",
     "\n",
     "This assignment should be completed in Python, and a PDF file should be submitted, containing both code and written answers. If you like, you may create your own Jupyter Notebook file from scratch, but it is likely easier to modify this one.\n",
     "\n",
@@ -21,7 +21,7 @@
     "\n",
     "If you like, you may collaborate with others in the class. If you choose to do so, please indicate with whom you have worked at the top of your PDF. Separate submissions are required.\n",
     "\n",
-    "Any questions can be addressed to Kamilah ([kamilah.ebrahim@mail.utoronto.ca]()) and/or Ananya ([ananya.jha@mail.utoronto.ca]()) before the due-date. Please sumbit your assistments through this [link](https://forms.gle/qSnbougKaH5cvntb8)."
+    "Any questions can be addressed to Kamilah ([kamilah.ebrahim@mail.utoronto.ca]()) and/or Ananya ([ananya.jha@mail.utoronto.ca]()) before the due-date. Please submit your assignments through your Drive Folder."
    ]
   },
   {
