added HW 1 answers, fixed typos, added names/mails

--- a/03-exercises/6.2-linear_regression_exercises.ipynb
+++ b/03-exercises/6.2-linear_regression_exercises.ipynb
@@ -66,7 +66,7 @@
    "id": "6508f966-1f84-4d29-b91d-c3713a857bab",
    "metadata": {},
    "source": [
-    "Hint: Type `Boston?` to find out more about the dataset."
+    "Hint: Type `Boston` to find out more about the dataset."
    ]
   },
   {
@@ -499,6 +499,168 @@
    "source": [
     "*These exercises were adapted from :* James, Gareth, et al. An Introduction to Statistical Learning: with Applications in Python, Springer, 2023."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dc9e6fca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sum_sq</th>\n",
+       "      <th>df</th>\n",
+       "      <th>F</th>\n",
+       "      <th>PR(&gt;F)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>C(fcategory, Sum)</th>\n",
+       "      <td>11.614700</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.276958</td>\n",
+       "      <td>0.759564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C(partner_status, Sum)</th>\n",
+       "      <td>212.213778</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.120692</td>\n",
+       "      <td>0.002874</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C(fcategory, Sum):C(partner_status, Sum)</th>\n",
+       "      <td>175.488928</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.184623</td>\n",
+       "      <td>0.022572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Residual</th>\n",
+       "      <td>817.763961</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              sum_sq    df          F  \\\n",
+       "C(fcategory, Sum)                          11.614700   2.0   0.276958   \n",
+       "C(partner_status, Sum)                    212.213778   1.0  10.120692   \n",
+       "C(fcategory, Sum):C(partner_status, Sum)  175.488928   2.0   4.184623   \n",
+       "Residual                                  817.763961  39.0        NaN   \n",
+       "\n",
+       "                                            PR(>F)  \n",
+       "C(fcategory, Sum)                         0.759564  \n",
+       "C(partner_status, Sum)                    0.002874  \n",
+       "C(fcategory, Sum):C(partner_status, Sum)  0.022572  \n",
+       "Residual                                       NaN  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "\n",
+    "from statsmodels.formula.api import ols\n",
+    "\n",
+    "moore = sm.datasets.get_rdataset(\"Moore\", \"carData\",\n",
+    "                                  cache=True) # load data\n",
+    "\n",
+    "\n",
+    "data = moore.data\n",
+    "\n",
+    "data = data.rename(columns={\"partner.status\":\n",
+    "                          \"partner_status\"}) # make name pythonic\n",
+    "\n",
+    "moore_lm = ols('conformity ~ C(fcategory, Sum)*C(partner_status, Sum)',\n",
+    "              data=data).fit()\n",
+    "\n",
+    "\n",
+    "table = sm.stats.anova_lm(moore_lm, typ=2) # Type 2 ANOVA DataFrame\n",
+    "\n",
+    "table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "299c8369",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:             conformity   R-squared:                       0.324\n",
+      "Model:                            OLS   Adj. R-squared:                  0.237\n",
+      "Method:                 Least Squares   F-statistic:                     3.734\n",
+      "Date:                Fri, 15 Mar 2024   Prob (F-statistic):            0.00740\n",
+      "Time:                        12:11:16   Log-Likelihood:                -129.10\n",
+      "No. Observations:                  45   AIC:                             270.2\n",
+      "Df Residuals:                      39   BIC:                             281.0\n",
+      "Df Model:                           5                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "============================================================================================================================\n",
+      "                                                               coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "----------------------------------------------------------------------------------------------------------------------------\n",
+      "Intercept                                                   12.0508      0.728     16.564      0.000      10.579      13.522\n",
+      "C(fcategory, Sum)[S.high]                                    0.1903      0.999      0.191      0.850      -1.830       2.210\n",
+      "C(fcategory, Sum)[S.low]                                     1.0992      1.026      1.071      0.291      -0.977       3.175\n",
+      "C(partner_status, Sum)[S.high]                               2.4591      0.728      3.380      0.002       0.988       3.931\n",
+      "C(fcategory, Sum)[S.high]:C(partner_status, Sum)[S.high]    -2.8431      0.999     -2.847      0.007      -4.863      -0.823\n",
+      "C(fcategory, Sum)[S.low]:C(partner_status, Sum)[S.high]      1.7909      1.026      1.745      0.089      -0.285       3.867\n",
+      "==============================================================================\n",
+      "Omnibus:                        2.500   Durbin-Watson:                   2.626\n",
+      "Prob(Omnibus):                  0.287   Jarque-Bera (JB):                1.712\n",
+      "Skew:                           0.465   Prob(JB):                        0.425\n",
+      "Kurtosis:                       3.216   Cond. No.                         2.39\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(moore_lm.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cbd34e5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -517,7 +679,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.5"
   },
   "vscode": {
    "interpreter": {
