removed useless misleading sentence in A2 handout

--- a/05-assignments/Assignment_2.ipynb
+++ b/05-assignments/Assignment_2.ipynb
@@ -42,6 +42,7 @@
     "\n",
     "# Import specific objects\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "import sklearn.model_selection as skm\n",
     "from statsmodels.stats.outliers_influence \\\n",
     "     import variance_inflation_factor as VIF\n",
     "from statsmodels.stats.anova import anova_lm\n",
@@ -66,7 +67,7 @@
    "source": [
     "### Question 1: Regularization via best subset selection\n",
     "\n",
-    "First, we'll use the `swiss` dataset, which is a built-in dataset in R, but can be added to Python. As always, start by reviewing a description of the dataset, by typing `swiss?` in the console.  To perform model selection via \"best subsets\", we will use the `regsubsets` function in the `leaps` package."
+    "First, we'll use the `swiss` dataset, which is a built-in dataset in R, but can be added to Python. As always, start by reviewing a description of the dataset, by typing `df` in the console."
    ]
   },
   {
