Adding in the new changes based on my discussion with Rohan

--- a/04-homework/optional/homework_3_Python.ipynb
+++ b/04-homework/optional/homework_3_Python.ipynb
@@ -124,16 +124,96 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e216ddf1-fe11-4828-91cd-602dcc99f110",
+   "metadata": {},
+   "source": [
+    "e) Repeat (d) using LDA."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19f61bb3-e580-44d8-bdf2-fd1df2956720",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Add your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1b1aae8-9bd0-4d41-8bed-863ff0a2117f",
+   "metadata": {},
+   "source": [
+    "f) Repeat (d) using QDA."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcf6063f-c52e-4eba-a930-8aaa4ed80c1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Add your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5fd84667-3df1-4f84-b2c6-c8ded360c91b",
    "metadata": {},
    "source": [
-    "e) Use KNN with K = 1."
+    "g) Repeat (d) using KNN with K = 1."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "3abebebc-4052-4d28-a1cd-1e9c69011d84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Add your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d27d831-0188-4381-8deb-218ec062d4f1",
+   "metadata": {},
+   "source": [
+    "h) Repeat (d) using naive Bayes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99c27b5f-8296-4b07-b67d-6482ca851cd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Add your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f2fdba9-6143-41c7-a3f6-d147170192f9",
+   "metadata": {},
+   "source": [
+    "i) Which of these methods appears to provide the best results on this data?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "300ceabd-ddaf-4779-b6f9-cb604c24fe10",
+   "metadata": {},
+   "source": [
+    "j) Experiment with different combinations of predictors, including possible transformations and interactions, for each of the methods. Report the variables, method, and associated confusion matrix that appears to provide the best results on the held out data. Note that you should also experiment with values for K in the KNN classifier."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16f35da6-2f96-448b-8aa1-8f5607c25e4a",
    "metadata": {},
    "outputs": [],
    "source": [
