Rebased with main

--- a/04-homework/homework_1.ipynb
+++ b/04-homework/homework_1.ipynb
@@ -6,7 +6,7 @@
    "id": "dde65af3-543e-49db-9cdd-23c58593e30c",
    "metadata": {},
    "source": [
-    "## DSI-06 Homework 1: ANSWERS\n",
+    "## Homework 1\n",
     "From Chapter 3, found on page 129 of ISLP\n",
     "\n",
     "*This question involves the use of simple linear regression on the Auto data set*"
