--- a/04-homework/homework_2.ipynb
+++ b/04-homework/homework_2.ipynb
@@ -6,7 +6,7 @@
    "id": "3fb8fab1-f373-43a6-bdfd-0e36cdbe43e5",
    "metadata": {},
    "source": [
-    "## DSI-06 Homework 2: ANSWERS\n",
+    "## Homework 2\n",
     "From Chapter 3, found on pages 129-130 of ISLP\n",
     "\n",
     "*This question involves the use of simple linear regression on the Auto data set*"
