--- a/04-homework/homework_3.ipynb
+++ b/04-homework/homework_3.ipynb
@@ -6,7 +6,7 @@
    "id": "9e5f602d-0241-4f0e-9aaa-aedc110ae8d0",
    "metadata": {},
    "source": [
-    "## DSI-06 Homework 3: ANSWERS\n",
+    "## Homework 3\n",
     "From Chapter 4, found on pages 196-197 of ISLP\n",
     "\n",
     "*This question should be answered using the `Weekly` data set, which is part of the ISLP package. This data is similar in nature to the Smarket data from this section's in-class exercises, except that it contains 1089 weekly returns for 21 years, from the beginning of 1990 to the end of 2010.*"
