--- a/04-homework/homework_4.ipynb
+++ b/04-homework/homework_4.ipynb
@@ -6,7 +6,7 @@
    "id": "c996be64-7528-4de5-9122-42153aa87bae",
    "metadata": {},
    "source": [
-    "## DSI-06 Homework 4: ANSWERS\n",
+    "## Homework 4\n",
     "From Chapter 5, found on pages 225-226 of ISLP\n",
     "\n",
     "*In Chapter 4, we used logistic regression to predict the probability of default using income and balance on the `Default` data set. We will now estimate the test error of this logistic regression model using the validation set approach. Do not forget to set a random seed before beginning your analysis.*"
