--- a/06-additional-resources/04_homework/homework_5.ipynb
+++ b/06-additional-resources/04_homework/homework_5.ipynb
@@ -6,7 +6,7 @@
    "id": "2ba01987-3a6c-4eb2-bb44-57508658e378",
    "metadata": {},
    "source": [
-    "## DSI-06 Homework 5: ANSWERS\n",
+    "## Homework 5\n",
     "From Chapter 6, found on pages 286-287 of ISLP\n",
     "\n",
     "*In this exercise, we will predict the number of applications received using the other variables in the `College` data set.*"
