Fixing assignments and an exercise

--- a/02-assignments/Assignment_2.ipynb
+++ b/02-assignments/Assignment_2.ipynb
@@ -216,8 +216,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# prediction accuracy rate\n",
-    "\n",
+    "# prediction accuracy rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9384d3f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# prediction error rate"
    ]
   },
@@ -248,6 +256,16 @@
    "metadata": {},
    "source": [
     "_(xiii)_ Fit a second KNN model, with $K=3$. Does this model perform better (i.e., have higher accuracy, compared to a random guess)?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fedbe4f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here"
    ]
   },
   {
