--- a/02-assignments/Assignment_3.ipynb
+++ b/02-assignments/Assignment_3.ipynb
@@ -61,14 +61,72 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7717a32c",
+   "metadata": {},
+   "source": [
+    "_(i)_ Create an `alpha_func(D, idx)` function which takes the `Sepal`'s `width` and `length` to calculate for alpha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3da5483",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff94d66b",
+   "metadata": {},
+   "source": [
+    "Test the code below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eda715cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alpha_func(df, range(100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f338b14e",
+   "metadata": {},
+   "source": [
+    "_(ii)_ Construct a new bootstrap data set and recompute alpha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34ee835f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rng = np.random.default_rng(0)\n",
+    "alpha_func(df,\n",
+    "           rng.choice(100,\n",
+    "                      100,\n",
+    "                      replace=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "056080ff-7aec-41aa-bb61-763b390e4cf2",
    "metadata": {},
    "source": [
-    "Imagine we are analysts working for a shipping company. The company wants to know the average length of iris' petals, to inform space allotment on an upcoming shipment. The relevant variable in the dataset is `Petal.Length`. \n",
+    "Imagine we are analysts working for a shipping company. The company wants to know the average length of iris' petals, to inform space allotment on an upcoming shipment. The relevant variable in the dataset is `Sepal.Length`. \n",
     "\n",
-    "_(i)_ Why is it (perhaps) not sufficient to simply calculate the mean of `Petal.Length`? What more information will preforming a bootstrap provide to us?  \n",
+    "_(iii)_ Why is it (perhaps) not sufficient to simply calculate the mean of `Sepal.Length`? What more information will preforming a bootstrap provide to us?  \n",
     "\n",
-    "_(ii)_ We can perform bootstrapping in Python by defining a simple function using `boot_SE()` for computing the bootstrap standard error. Remember, because bootstrapping involves randomness, we must first set a seed for reproducibility!"
+    "_(iv)_ We can perform bootstrapping in Python by defining a simple function using `boot_SE()` for computing the bootstrap standard error. Remember, because bootstrapping involves randomness, we must first set a seed for reproducibility!"
    ]
   },
   {
@@ -83,66 +141,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e43586e3-2b41-4b35-92f9-babb179ff8d1",
+   "id": "8a543472",
    "metadata": {},
    "source": [
-    "(iii) Before performing bootstrapping, we need to write our own, specialized function to calculate the statistic of interest: in our case, we want to calculate mean. There is one error (typo) in the function below. Correct the error."
+    "_(v)_ Evaluate the accuracy of our alpha estimate with B = 1000"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6c76495",
+   "id": "9ed41c4e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def my_func(data):\n",
-    "\n",
-    "    # Calculate the mean of data (which will be a bootstrap sample from 'Petal.Length')\n",
-    "    result = data.median()\n",
-    "    \n",
-    "    return result"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "621aed17-361a-4d00-91df-fd9d6084f8cf",
-   "metadata": {},
-   "source": [
-    "\n",
-    "_(iv)_ Now that we have our desired function, we can perform the bootstrap. Check out boot_samples()? to understand its three required arguments. Remember, because bootstrapping involves randomness, we must first set a seed for reproducibility!\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5f7ee6f-57bb-495d-a28c-13eacb2557de",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Provided function to compute the bootstrap samples\n",
-    "def boot_samples(data, func, R):\n",
-    "    \n",
-    "    # Initialize an empty list to store the results\n",
-    "    results = []\n",
-    "    \n",
-    "    # Perform bootstrapping\n",
-    "    for _ in range(R):\n",
-    "        # Generate a bootstrap sample\n",
-    "        bootstrap_sample = np.random.choice(data, size=len(data), replace=True)\n",
-    "        \n",
-    "        # Compute the result\n",
-    "        result = func(bootstrap_sample)\n",
-    "        \n",
-    "        # Store the result\n",
-    "        results.append(result)\n",
-    "    \n",
-    "    # Return the standard deviation of the results\n",
-    "    return results\n",
-    "\n",
-    "# Compute the bootstrapped samples\n",
-    "boot_se_samples = boot_samples(df['Petal.Length'], my_func, 1000)"
+    "# Your code here"
    ]
   },
   {
@@ -150,7 +162,7 @@
    "id": "785fe758-f395-40b6-a9a3-28ec2efeba29",
    "metadata": {},
    "source": [
-    "_(v)_ First, What is the original mean value ?\n",
+    "_(vi)_ What is the original mean value of `Sepal.Length`?\n",
     "\n",
     "Next, let's look _inside_ our bootstrapping to understand the new, bootstrapped sample we have created. Let's review the bootstrapped range, by using `t_range = np.ptp(boot_se_samples)`.\n",
     "\n",
