--- a/03-exercises/6-generalized_linear_models_exercise.ipynb
+++ b/03-exercises/6-generalized_linear_models_exercise.ipynb
@@ -90,7 +90,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Your code here"
+   ]
   },
   {
    "cell_type": "code",
