Replacing dashes with underscores

--- a/05_instructors/lesson_slides/additional_lecture_slides/6.7-tree-based-methods.md
+++ b/05_instructors/lesson_slides/additional_lecture_slides/6.7-tree-based-methods.md
@@ -65,7 +65,7 @@ The goal is to find regions $R_1, R_2, \dots R_J$ (boxes for simplicity) that mi
 -   The **internal nodes** are the points on the tree where the predictor space is split.
 -   The **branches** of the tree are the segments that connect the nodes.
 
-![](images/tree%20diagram.png)
+![](images/tree_diagram.png)
 
 ---
 
