--- a/05_instructors/lesson_slides/additional_lecture_slides/6.10_unsupervised_learning_slides.md
+++ b/05_instructors/lesson_slides/additional_lecture_slides/6.10_unsupervised_learning_slides.md
@@ -85,7 +85,7 @@ Here are a few useful interpretations of the first principal component:
 
 A data set with two features (Population and Ad Spending) is plotted below. The green curve is the first principal component.
 
-![](images/first_component.png)
+![](./images/610_first_component.png)
 
 1.  The first principal component is in the widest or most variable direction of the data.
 
@@ -109,7 +109,7 @@ _**♦️$Z_2$ is the linear combination of the features that again maximizes va
 
 A data set with two features (Population and Ad Spending) is plotted below. The green curve is the first principal component and the dashed blue curve is the second.
 
-![](images/first_component.png)
+![](./images/610_first_component.png)
 
 ---
 
@@ -119,7 +119,7 @@ A data set with two features (Population and Ad Spending) is plotted below. The 
 -   Since there are only two dimensions there is only one choice for $\phi_2$.
 -   If there were $p > 2$ features, there would be multiple directions to choose between.
 
-![](images/first_component.png)
+![](./images/610_first_component.png)
 
 ---
 
@@ -127,7 +127,7 @@ A data set with two features (Population and Ad Spending) is plotted below. The 
 
 The three dimensional data set with the first and second principal components defining the plane.
 
-![](images/second_component3D.png)
+![](./images/610_second_component3D.png)
 
 ---
 
@@ -137,7 +137,7 @@ The three dimensional data set with the first and second principal components de
 -   It also follows the directions along which the data varies the most.
 -   The colour in this plot it not important.
 
-![](images/second_component3D.png)
+![](./images/610_second_component3D.png)
 
 ---
 
@@ -155,7 +155,7 @@ We can continue to create the principal components by taking the linear combinat
 
 A biplot for the first two principal components of a data set of 50 states with features {A, B, C, D}.
 
-![](images/PCA.png)
+![](./images/610_PCA.png)
 
 ---
 
@@ -165,7 +165,7 @@ A biplot for the first two principal components of a data set of 50 states with 
     -   0.54 on the first component ($\phi_{B1} = 0.54$)
     -   0.17 on the first component ($\phi_{B2} = 0.17$)
 
-![](images/PCA.png)
+![](./images/610_PCA.png)
 
 ---
 
@@ -211,7 +211,7 @@ Assuming that the features have been centered to have mean zero...
 
 _**♦️We scale each feature to have mean zero and standard deviation one before performing PCA.♦️**_
 
-![](images/scaled_sunscaled.png)
+![](./images/610_scaled_sunscaled.png)
 
 ---
 
@@ -219,7 +219,7 @@ _**♦️We scale each feature to have mean zero and standard deviation one befo
 
 -   Left: PCA biplot with variables scaled.
 
-![](images/scaled_sunscaled.png)
+![](./images/610_scaled_sunscaled.png)
 
 ---
 
@@ -231,7 +231,7 @@ _**♦️We scale each feature to have mean zero and standard deviation one befo
 
 -   The right plot does not show patterns as well.
 
-![](images/scaled_sunscaled.png)
+![](./images/610_scaled_sunscaled.png)
 
 ---
 
@@ -279,7 +279,7 @@ $\rightarrow$   For a $n \times p$ data matrix $\mathbf{X}$ there are $\min(n-1,
 -   The third principal component accounts for less than 10% of the variance in the data.
 -   2 principal components are probably sufficient to get a good understanding of this data set.
 
-![](images/scree_plot.png)
+![](./images/610_scree_plot.png)
 
 ---
 
@@ -401,7 +401,7 @@ The results obtained depend on the initial random cluster assignment in step 1 o
 
 The $K$-means algorithm finds a **local optimum** which does not guarantee it is the **global optimum**.
 
-![](images/local_global_optimum.png)
+![](./images/610_local_global_optimum.png)
 
 To find the global optima:
 1. Run the algorithm multiple times with random initial cluster assignments.
@@ -421,7 +421,7 @@ Open the Unsupervised Learning Exercises Jupyter Notebook file.
 
 Hierarchical clustering results in a **dendrogram** which is a tree-based representation of the observations.
 
-![](images/dendrogram.png)
+![](./images/610_dendrogram.png)
 
 ---
 
@@ -436,7 +436,7 @@ Hierarchical clustering results in a **dendrogram** which is a tree-based repres
 
 # Dendrogram
 
-![](images/small_dendogram.png)
+![](./images/610_small_dendogram.png)
 
 -   Observations 1 and 6 are quite similar since they fuse at the bottom of the dendrogram.
 -   Observations 9 and 2 are quite dissimilar since they fuse near the top.
@@ -445,7 +445,7 @@ Hierarchical clustering results in a **dendrogram** which is a tree-based repres
 
 # Dendrogram
 
-![](images/small_dendogram.png)
+![](./images/610_small_dendogram.png)
 
 -   Observation 9 is equally similar to observations 2, 8, 5, and 7.
 -   Thus, the horizontal axis tells us nothing about similarity.
@@ -456,7 +456,7 @@ Hierarchical clustering results in a **dendrogram** which is a tree-based repres
 
 _**♦️To create clusters we make a horizontal cut across the dendrogram. The distinct sets of observations beneath the cut are the clusters.♦️**_
 
-![](images/hierarchical_cluster.png)
+![](./images/610_hierarchical_cluster.png)
 
 -   Left: Cutting at a height of 9 results in two clusters.
 
@@ -464,7 +464,7 @@ _**♦️To create clusters we make a horizontal cut across the dendrogram. The 
 
 # Clustering with a Dendrogram
 
-![](images/hierarchical_cluster.png)
+![](./images/610_hierarchical_cluster.png)
 
 -   Right: Cutting at a height of 5 results in three clusters.
 -   We can obtain any number of clusters from a single dendrogram.
@@ -565,13 +565,13 @@ Centroid linkage can result in **inversion** whereby two clusters are fused at a
 
 The first iteration of the algorithm on a data set of 9 observations with two features. Euclidean distance and complete linkage are used.
 
-![](images/hierarchical_alg1.png)
+![](./images/610_hierarchical_alg1.png)
 
 ---
 
 # Hierarchial Clustering Algorithm
 
-![](images/hierarchical_alg1.png)
+![](./images/610_hierarchical_alg1.png)
 
 -   Left: there are 9 clusters each containing one observation.
 -   Right: identify {7} and {5} as the most similar clusters and fuse them.
@@ -582,13 +582,13 @@ The first iteration of the algorithm on a data set of 9 observations with two fe
 
 The next 2 iterations of step 3 of the algorithm.
 
-![](images/hierarchical_alg2.png)
+![](./images/610_hierarchical_alg2.png)
 
 ---
 
 # Hierarchial Clustering Algorithm
 
-![](images/hierarchical_alg2.png)
+![](./images/610_hierarchical_alg2.png)
 
 -   Left: there are 9 clusters each containing one observation.
 -   Right: identify {7} and {5} as the most similar clusters and fuse them.
@@ -599,7 +599,7 @@ The next 2 iterations of step 3 of the algorithm.
 
 The choice of the linkage type will have an effect on the dendrogram produced by the hierarchical clustering algorithm.
 
-![](images/linkage_choice.png)
+![](./images/610_linkage_choice.png)
 
 ---
 
